src/main/metadata/objects/Account_Vehicle_Updates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Created to update Account Status to Ex-Customer if account is not associated with any Vehicle.</description>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Amount__c</fullName>
        <label>Vehicle Amount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Vehicle Updates</label>
</CustomObject>